Agrego carpeta img a src y corrijo url de imágenes en html

--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
       <div id="title">
 
         <div class="imgTitle">
-          <img src="../../mujer-sentada.svg" alt="mujer sentada">
+          <img src="img/mujer-sentada.svg" alt="mujer sentada">
         </div>
         <div id="imgTitle">
           <h1>Archivos Secretos</h1>
         </div>
         <div class="imgTitle">
-          <img src="../../mujer-sentada2.svg" alt="mujer sentada">
+          <img src="img/mujer-sentada2.svg" alt="mujer sentada">
         </div>
 
       </div>
