Elimino Alert y lo reemplazo por un mensaje dentro de un div

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
           <button id="copy1">Copiar</button>
           <button id="comeBack1">Volver</button>
           <button id="restart1">Reiniciar</button>
+          <div id="invalid1"><p>'Hay caracteres no permitidos. No serán considerados.'</p></div>
           <div id="cipher">
             <p>Nombre secreto creado. <br> Asegúrate de guardar la clave para revelar tu secreto.</p>
           </div>
@@ -61,6 +62,7 @@
           <button id="copy2">Copiar</button>
           <button id="comeBack2">Volver</button>
           <button id="restart2">Reiniciar</button>
+          <div id="invalid2"><p>'Hay caracteres no permitidos. No serán considerados.'</p></div>
           <div id="decipher">
             <p>Nombre secreto revelado. <br> Disfrútalo.</p>
           </div>
